--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "accs-cache-handler",
   "version": "1.1.0",
-  "description": "",
+  "description": "Library to provide standard, simple caching interfaces (get, put, delete) around the Caching platform services in Oracle’s Application Container Cloud service.",
   "main": "cache_handler.js",
   "scripts": {
     "test": "mocha --reporter spec"
